correction color and z-index buttons

--- a/assets/css/modules/team.css
+++ b/assets/css/modules/team.css
@@ -167,11 +167,12 @@ section.squad {
     bottom: 10px;
     display: block;
     font-size: var(--h2-font-size);
-    z-index: var(--z-fixed);
+    z-index: var(--z-main);
     cursor: pointer;
 }
 
 .buttons{
+    color: var(--dark-gray);
     display: flex;
     justify-content: center;
 }
